--- a/Objects/head.html
+++ b/Objects/head.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="ut=8" />
-    <meta name="author" content="Jessica Wong"
+    <meta name="author" content="Jessica Wong">
 
-    <meta name="description" content="">
-    The second section of Interaction Design Fundamentals looks into the introduction of markup language and the presentation of online content.">
+    <meta name="description" content="The second section of Interaction Design Fundamentals looks into the introduction of markup language and the presentation of online content.">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page Title</title>
 
